src/objects/vlocity_ins__CalculationProcedureStep__c.object
<CustomObject>
    <description>Represents a step within a specific version of a Vlocity Calculation Procedure.</description>
    <fields>
        <fullName>vlocity_ins__CalculationFormulaLong__c</fullName>
        <label>Calculation Formula (Long)</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__CalculationFormulaTags__c</fullName>
        <label>Calculation Formula Tags</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__CalculationFormula__c</fullName>
        <label>Calculation Formula</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__CalculationMatrixId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Pricing Matrix</label>
        <referenceTo>vlocity_ins__CalculationMatrix__c</referenceTo>
        <relationshipLabel>Vlocity Calculation Procedure Step</relationshipLabel>
        <relationshipName>PricingServiceCalculationDetail</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__CalculationProcedureId__c</fullName>
        <formula>vlocity_ins__CalculationProcedureVersionId__r.vlocity_ins__CalculationProcedureId__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Calculation Procedure</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__CalculationProcedureVersionId__c</fullName>
        <label>Vlocity Procedure Version</label>
        <referenceTo>vlocity_ins__CalculationProcedureVersion__c</referenceTo>
        <relationshipName>Vlocity_Pricing_Service_Step</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ConditionalInputDisplayData__c</fullName>
        <label>Conditional Input</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Conditions__c</fullName>
        <label>Conditions</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Function__c</fullName>
        <label>Function</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Matrix Lookup</fullName>
                </value>
                <value>
                    <fullName>Calculation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__GlobalKey__c</fullName>
        <description>The globally unique identifier of the calculation procedure step. Used to identify the calculation procedure step across Salesforce instances.</description>
        <externalId>true</externalId>
        <label>Global Key</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Input__c</fullName>
        <label>Input</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__IsConditionalStep__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Conditional Step</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__IsIncludedInResult__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Result</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__MatrixRecordType__c</fullName>
        <formula>vlocity_ins__CalculationMatrixId__r.RecordType.DeveloperName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Matrix Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__OutputJSON__c</fullName>
        <label>Output JSON</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__OutputMappingJSON__c</fullName>
        <label>Output Mapping JSON</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Sequence__c</fullName>
        <label>Sequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__TaskType__c</fullName>
        <label>Task Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Vlocity Calculation Procedure Step</label>
    <nameField>
        <label>Calculation Procedure Step Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vlocity Calculation Procedure Step</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>